examples/k8stest/conf/EdgionPlugins/ForwardAuth/06_HTTPRoute_default_forward-auth-hide-creds.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forward-auth-hide-creds-route
  namespace: edgion-default
spec:
  parentRefs:
    - name: edgion-plugins-gateway
      namespace: edgion-test
  hostnames:
    - "forward-auth-hide-creds.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: edgion.io
            kind: EdgionPlugins
            name: forward-auth-hide-creds
      backendRefs:
        - name: test-http
          namespace: edgion-test
          port: 30001
